# mcp-config-guard

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/config_guard/: __init__.py
tests/: test_package.py
