[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-config-guard"
version = "2.0.0"
description = "Zero-dependency security linter for MCP (Model Context Protocol) configurations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kaleb Teeter", email = "kteeter0405@gmail.com"},
]
keywords = [
    "mcp", "security", "linter", "model-context-protocol",
    "claude", "ai-safety", "owasp", "sarif", "vulnerability-scanner",
    "supply-chain-security", "typosquat-detection", "cve",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/KGT24k/config-guard"
Repository = "https://github.com/KGT24k/config-guard"
Issues = "https://github.com/KGT24k/config-guard/issues"

[project.scripts]
config-guard = "config_guard:main"
mcp-config-guard = "config_guard:main"

[tool.hatch.build.targets.wheel]
packages = ["src/config_guard"]
